release/UltrafastSecp256k1-v3.66.0-linux-x64/include/ufsecp/ufsecp_version.h

/** Return packed version at runtime (same as UFSECP_VERSION_PACKED). */
UFSECP_API unsigned int ufsecp_version(void);
/** Return ABI version at runtime (same as UFSECP_ABI_VERSION). */
UFSECP_API unsigned int ufsecp_abi_version(void);