bindings/python/ufsecp/__init__.py


    # -- Addresses --------------------------------------------------------

    def addr_p2pkh(self, pubkey: bytes, network: int = NET_MAINNET) -> str:
        _chk(pubkey, 33, "pubkey")
        return self._get_addr(self._lib.ufsecp_addr_p2pkh, pubkey, network)

    def addr_p2wpkh(self, pubkey: bytes, network: int = NET_MAINNET) -> str:
        _chk(pubkey, 33, "pubkey")
        return self._get_addr(self._lib.ufsecp_addr_p2wpkh, pubkey, network)

    def addr_p2tr(self, xonly_key: bytes, network: int = NET_MAINNET) -> str:
        _chk(xonly_key, 32, "xonly_key")
        return self._get_addr(self._lib.ufsecp_addr_p2tr, xonly_key, network)

    # -- WIF --------------------------------------------------------------

    def wif_encode(self, privkey: bytes, compressed: bool = True, network: int = NET_MAINNET) -> str:
        _chk(privkey, 32, "privkey")
        buf = create_string_buffer(128)
        length = c_size_t(128)
        self._throw(self._lib.ufsecp_wif_encode(
            self._ctx, privkey, 1 if compressed else 0, network,
            ctypes.cast(buf, POINTER(c_uint8)), byref(length)
        ), "wif_encode")
        return buf.raw[:length.value].decode()

    def wif_decode(self, wif: str) -> WifDecoded:
        key = (c_uint8 * 32)()
        comp = c_int()
        net = c_int()
        self._throw(self._lib.ufsecp_wif_decode(
            self._ctx, wif.encode(), key, byref(comp), byref(net)
        ), "wif_decode")
        return WifDecoded(bytes(key), comp.value == 1, net.value)

    # -- BIP-32 -----------------------------------------------------------

    def bip32_master(self, seed: bytes) -> bytes:
        if not (16 <= len(seed) <= 64):
            raise ValueError(f"Seed must be 16-64 bytes, got {len(seed)}")
        key = (c_uint8 * 82)()
        self._throw(self._lib.ufsecp_bip32_master(self._ctx, seed, len(seed), key), "bip32_master")
        return bytes(key)

    def bip32_derive(self, parent: bytes, index: int) -> bytes:
        _chk(parent, 82, "parent")
        child = (c_uint8 * 82)()
        self._throw(self._lib.ufsecp_bip32_derive(self._ctx, parent, c_uint32(index), child), "bip32_derive")
        return bytes(child)

    def bip32_derive_path(self, master: bytes, path: str) -> bytes:
        _chk(master, 82, "master")
        key = (c_uint8 * 82)()
        self._throw(self._lib.ufsecp_bip32_derive_path(self._ctx, master, path.encode(), key), "bip32_derive_path")
        return bytes(key)

    def bip32_privkey(self, key: bytes) -> bytes:
        _chk(key, 82, "key")
        priv = (c_uint8 * 32)()
        self._throw(self._lib.ufsecp_bip32_privkey(self._ctx, key, priv), "bip32_privkey")
        return bytes(priv)

    def bip32_pubkey(self, key: bytes) -> bytes:
        _chk(key, 82, "key")
        pub = (c_uint8 * 33)()
        self._throw(self._lib.ufsecp_bip32_pubkey(self._ctx, key, pub), "bip32_pubkey")
        return bytes(pub)

    # -- Taproot ----------------------------------------------------------

    def taproot_output_key(self, internal_x: bytes, merkle_root: Optional[bytes] = None) -> TaprootOutputKey:
        _chk(internal_x, 32, "internal_x")
        out = (c_uint8 * 32)()
        parity = c_int()
        mr = merkle_root if merkle_root else None
        self._throw(self._lib.ufsecp_taproot_output_key(self._ctx, internal_x, mr, out, byref(parity)), "taproot_output_key")
        return TaprootOutputKey(bytes(out), parity.value)

    def taproot_tweak_seckey(self, privkey: bytes, merkle_root: Optional[bytes] = None) -> bytes:
        _chk(privkey, 32, "privkey")
        out = (c_uint8 * 32)()
        mr = merkle_root if merkle_root else None
        self._throw(self._lib.ufsecp_taproot_tweak_seckey(self._ctx, privkey, mr, out), "taproot_tweak_seckey")
        return bytes(out)

    def taproot_verify(self, output_x: bytes, parity: int, internal_x: bytes, merkle_root: Optional[bytes] = None) -> bool:
        _chk(output_x, 32, "output_x"); _chk(internal_x, 32, "internal_x")
        mr = merkle_root if merkle_root else None
        mr_len = len(merkle_root) if merkle_root else 0
        return self._lib.ufsecp_taproot_verify(self._ctx, output_x, parity, internal_x, mr, mr_len) == _OK

    # -- Internals --------------------------------------------------------

    def _throw(self, rc: int, op: str) -> None:
        if rc != _OK:
            raise UfsecpError(op, rc)

    def _get_addr(self, fn, key: bytes, network: int) -> str:
        buf = create_string_buffer(128)
        length = c_size_t(128)
        self._throw(fn(self._ctx, key, network, ctypes.cast(buf, POINTER(c_uint8)), byref(length)), "address")
        return buf.raw[:length.value].decode()

    def _bind(self) -> None:
        """Set up argtypes / restypes for type safety."""
        L = self._lib
        vp = c_void_p
        p8 = POINTER(c_uint8)
        pvp = POINTER(c_void_p)

        L.ufsecp_ctx_create.argtypes = [pvp]
        L.ufsecp_ctx_create.restype = c_int
        L.ufsecp_ctx_destroy.argtypes = [vp]
        L.ufsecp_ctx_destroy.restype = None

        L.ufsecp_ctx_clone.argtypes = [vp, pvp]
        L.ufsecp_ctx_clone.restype = c_int

        L.ufsecp_last_error.argtypes = [vp]
        L.ufsecp_last_error.restype = c_int
        L.ufsecp_last_error_msg.argtypes = [vp]
        L.ufsecp_last_error_msg.restype = c_char_p

        L.ufsecp_version.restype = c_uint32
        L.ufsecp_abi_version.restype = c_uint32

        for name in (
            "ufsecp_pubkey_create", "ufsecp_pubkey_create_uncompressed",
            "ufsecp_pubkey_xonly",
        ):
            getattr(L, name).argtypes = [vp, p8, p8]
            getattr(L, name).restype = c_int

        L.ufsecp_pubkey_parse.argtypes = [vp, p8, c_size_t, p8]
        L.ufsecp_pubkey_parse.restype = c_int

        L.ufsecp_seckey_verify.argtypes = [vp, p8]
        L.ufsecp_seckey_verify.restype = c_int
        L.ufsecp_seckey_negate.argtypes = [vp, p8]
        L.ufsecp_seckey_negate.restype = c_int

        for name in ("ufsecp_seckey_tweak_add", "ufsecp_seckey_tweak_mul"):
            getattr(L, name).argtypes = [vp, p8, p8]
            getattr(L, name).restype = c_int

        for name in ("ufsecp_ecdsa_sign", "ufsecp_ecdsa_verify"):
            getattr(L, name).argtypes = [vp, p8, p8, p8]
            getattr(L, name).restype = c_int

        L.ufsecp_ecdsa_sig_to_der.argtypes = [vp, p8, p8, POINTER(c_size_t)]
        L.ufsecp_ecdsa_sig_to_der.restype = c_int
        L.ufsecp_ecdsa_sig_from_der.argtypes = [vp, p8, c_size_t, p8]
        L.ufsecp_ecdsa_sig_from_der.restype = c_int

        L.ufsecp_ecdsa_sign_recoverable.argtypes = [vp, p8, p8, p8, POINTER(c_int)]
        L.ufsecp_ecdsa_sign_recoverable.restype = c_int
        L.ufsecp_ecdsa_recover.argtypes = [vp, p8, p8, c_int, p8]
        L.ufsecp_ecdsa_recover.restype = c_int

        L.ufsecp_schnorr_sign.argtypes = [vp, p8, p8, p8, p8]
        L.ufsecp_schnorr_sign.restype = c_int
        L.ufsecp_schnorr_verify.argtypes = [vp, p8, p8, p8]
        L.ufsecp_schnorr_verify.restype = c_int

        for name in ("ufsecp_ecdh", "ufsecp_ecdh_xonly", "ufsecp_ecdh_raw"):
            getattr(L, name).argtypes = [vp, p8, p8, p8]
            getattr(L, name).restype = c_int

        L.ufsecp_sha256.argtypes = [p8, c_size_t, p8]
        L.ufsecp_sha256.restype = c_int
        L.ufsecp_hash160.argtypes = [p8, c_size_t, p8]
        L.ufsecp_hash160.restype = c_int
        L.ufsecp_tagged_hash.argtypes = [c_char_p, p8, c_size_t, p8]
        L.ufsecp_tagged_hash.restype = c_int

        for name in ("ufsecp_addr_p2pkh", "ufsecp_addr_p2wpkh", "ufsecp_addr_p2tr"):
            getattr(L, name).argtypes = [vp, p8, c_int, p8, POINTER(c_size_t)]
            getattr(L, name).restype = c_int

        L.ufsecp_wif_encode.argtypes = [vp, p8, c_int, c_int, p8, POINTER(c_size_t)]
        L.ufsecp_wif_encode.restype = c_int
        L.ufsecp_wif_decode.argtypes = [vp, c_char_p, p8, POINTER(c_int), POINTER(c_int)]
        L.ufsecp_wif_decode.restype = c_int

        L.ufsecp_bip32_master.argtypes = [vp, p8, c_size_t, p8]
        L.ufsecp_bip32_master.restype = c_int
        L.ufsecp_bip32_derive.argtypes = [vp, p8, c_uint32, p8]
        L.ufsecp_bip32_derive.restype = c_int
        L.ufsecp_bip32_derive_path.argtypes = [vp, p8, c_char_p, p8]
        L.ufsecp_bip32_derive_path.restype = c_int
        L.ufsecp_bip32_privkey.argtypes = [vp, p8, p8]
        L.ufsecp_bip32_privkey.restype = c_int
        L.ufsecp_bip32_pubkey.argtypes = [vp, p8, p8]
        L.ufsecp_bip32_pubkey.restype = c_int

        L.ufsecp_taproot_output_key.argtypes = [vp, p8, p8, p8, POINTER(c_int)]
        L.ufsecp_taproot_output_key.restype = c_int
        L.ufsecp_taproot_tweak_seckey.argtypes = [vp, p8, p8, p8]
        L.ufsecp_taproot_tweak_seckey.restype = c_int
        L.ufsecp_taproot_verify.argtypes = [vp, p8, c_int, p8, p8, c_size_t]
        L.ufsecp_taproot_verify.restype = c_int


def _chk(data: bytes, expected: int, name: str) -> None:
    if len(data) != expected:
        raise ValueError(f"{name} must be {expected} bytes, got {len(data)}")
